<resources>
    <string name="app_name">LoginScreen</string>
    <string name="grow_together">Grow Together</string>
    <string name="let_s_get_started">Let’s Get Started</string>
    <string name="join_now">JOIN NOW</string>
    <string name="welcome_bac">Welcome Back!</string>
    <string name="enter_your_">Enter Your Username &amp; Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="or_create_a_new_account">Or Create a New Account</string>
    />
</resources>